example/_catalog_museum/gitlab/template.yaml
apiVersion: tmax.io/v1
kind: ClusterTemplate
metadata:
  name: gitlab-template
  annotations:
    template-version: 1.2.2
    tested-operator-version: 4.1.3.2
shortDescription: "GitLab Deployment"
longDescription: "GitLab Deployment"
urlDescription: https://about.gitlab.com/
imageUrl: "https://upload.wikimedia.org/wikipedia/commons/c/c6/GitLab_logo.png"
provider: tmax
tags:
- gitlab
- git
- scm
parameters:
- name: APP_NAME
  displayName: AppName
  description: A GitLab Deployment Name
  required: true
- name: STORAGE
  displayName: Storage
  description: Storage size
  required: true
- name: SERVICE_TYPE
  displayName: ServiceType
  description: Service Type (ClsuterIP/NodePort/LoadBalancer/Ingress)
  required: true
- name: WEB_NODE_IP
  displayName: WebNodeIP
  description: (Only for NodePort type) Web NodeIP
  required: false
  value: ''
- name: WEB_NODE_PORT
  displayName: WebNodePort
  description: (Only for NodePort type) Web NodePort
  required: false
  value: 80
  valueType: number
- name: INGRESS_HOST
  displayName: IngressHost
  description: (Only for Ingress type) Ingress hostname
  required: false
- name: SSH_PORT
  displayName: SshPort
  description: SSH port for git clone/pull/push
  required: true
  value: 2221
  valueType: number
- name: RESOURCE_CPU
  displayName: ResourceCPU
  description: Resource request, CPU (e.g., 1)
  required: true
- name: RESOURCE_MEM
  displayName: ResourceMem
  description: Resource request, Mem (e.g., 1Gi)
  required: true
- name: KEYCLOAK_URL
  displayName: Keycloak URL
  description: Keycloak URL (including protocol)
  value: ''
  required: false
- name: KEYCLOAK_CLIENT
  displayName: Keycloak Client
  description: keycloak client name
  value: ''
  required: false
- name: KEYCLOAK_SECRET
  displayName: Keycloak Secret
  description: Keycloak client secret
  value: ''
  required: false
objects:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: ${APP_NAME}-account
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: ${APP_NAME}-role
  rules:
  - apiGroups: [""]
    resources: ["services"]
    resourceNames: ["${APP_NAME}-service"]
    verbs: ["get", "list", "create", "patch", "update"]
  - apiGroups: ["networkings", "extensions"]
    resources: ["ingresses"]
    resourceNames: ["${APP_NAME}-ingress"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: ${APP_NAME}-binding
  subjects:
  - kind: ServiceAccount
    name: ${APP_NAME}-account
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ${APP_NAME}-role
- apiVersion: v1
  kind: Service
  metadata:
    name: ${APP_NAME}-service
    labels:
      app: ${APP_NAME}
  spec:
    type: ClusterIP
    ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: ssh
      port: ${SSH_PORT}
      targetPort: 22
    selector:
      app: ${APP_NAME}
- apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    name: ${APP_NAME}-ingress
    annotations:
      kubernetes.io/ingress.class: nginx-shd
  spec:
    rules:
    - host: waiting.ip
      http:
        paths:
        - backend:
            serviceName: ${APP_NAME}-service
            servicePort: ${WEB_NODE_PORT}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-pvc
    labels:
      app: ${APP_NAME}
  spec:
    storageClassName: csi-cephfs-sc
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: ${STORAGE}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${APP_NAME}
    labels:
      app: ${APP_NAME}
  spec:
    selector:
      matchLabels:
        app: ${APP_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: ${APP_NAME}
      spec:
        serviceAccountName: ${APP_NAME}-account
        containers:
        - name: ${APP_NAME}
          image: gitlab/gitlab-ce:12.9.2-ce.0
          command:
          - /bin/sh
          - -c
          - -x
          - |
            export GITLAB_OMNIBUS_CONFIG="$(cat /tmp/shared/omnibus.env)"
            /assets/wrapper
          ports:
          - name: http
            containerPort: ${WEB_NODE_PORT}
          - name: https
            containerPort: 443
          - name: ssh
            containerPort: 22
          volumeMounts:
          - name: ${APP_NAME}-pv
            mountPath: /etc/gitlab
            subPath: config
          - name: ${APP_NAME}-pv
            mountPath: /var/opt/gitlab
            subPath: data
          - name: shared
            mountPath: /tmp/shared
          resources:
            limits:
              cpu: ${RESOURCE_CPU}
              memory: ${RESOURCE_MEM}
            requests:
              cpu: ${RESOURCE_CPU}
              memory: ${RESOURCE_MEM}
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - |
                /opt/gitlab/bin/gitlab-healthcheck --fail --max-time 10
            periodSeconds: 150
        volumes:
        - name: ${APP_NAME}-pv
          persistentVolumeClaim:
            claimName: ${APP_NAME}-pvc
        - name: shared
          emptyDir: {}
plans:
- name: gitlab-plan1
  description: "GitLab Plan"
  metadata:
    bullets:
    - "GitLab Deployment Plan"
    costs:
      amount: 100
      unit: $
  free: false
  bindable: true
  plan_updateable: false
  schemas:
    service_instance:
      create:
        parameters:
          APP_NAME: gitlab-deploy
          STORAGE: 10Gi
